Feature. Set DNS on user.adfilter

--- a/config.json
+++ b/config.json
@@ -3,5 +3,9 @@
 	"Listeners": [
 		{"Addr": "127.0.0.1:1812", "Secret": "secret", "CIDR": ["127.0.0.1/32"]},
 		{"Addr": "127.0.0.1:1813", "Secret": "secret", "CIDR": ["127.0.0.1/32"]}
+	],
+	"DNS": [
+		"8.8.8.8",
+		"8.8.4.4"
 	]
 }
